<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:background="@color/color_background"
    tools:context=".Register">

    <TextView
        android:id="@+id/activity_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/color_input"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_register_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_register_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/color_lavender"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/activity_register_namesurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_border"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/namesurname"
                android:textColorHint="@color/color_background"
                android:textColor="@color/color_background"
                android:padding="12dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/activity_register_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_border"
                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                android:drawablePadding="8dp"
                android:hint="@string/dob"
                android:textColorHint="@color/color_background"
                android:textColor="@color/color_background"
                android:padding="12dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/activity_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_border"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:textColorHint="@color/color_background"
                android:textColor="@color/color_background"
                android:padding="12dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/activity_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_border"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:textColorHint="@color/color_background"
                android:textColor="@color/color_background"
                android:padding="12dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/activity_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_border"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/color_background"
                android:textColor="@color/color_background"
                android:inputType="textPassword"
                android:padding="12dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/activity_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup"
                android:backgroundTint="@color/color_disabled"
                android:textColor="@color/color_input"
                android:enabled="false"
                />

            <TextView
                android:id="@+id/activity_register_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/signin"
                android:textColor="@color/color_background" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>