<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/fragment_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/color_lavender"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/fragment_profile_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namesurname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/fragment_profile_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:layout_below="@id/fragment_profile_fullname"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/fragment_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_below="@id/fragment_profile_dob"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/fragment_profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_below="@id/fragment_profile_email"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_profile_additional_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/fragment_profile_fullname_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/fragment_profile_dob_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/fragment_profile_email_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/fragment_profile_username_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/fragment_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>


    <Button
        android:id="@+id/fragment_profile_button_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        />

</LinearLayout>